my-database.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-database
spec:
  containers:
  - name: database
    image: mysql:5.7
