pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
spec:
  containers:
  - name: service
    image: nginx
    ports:
    - containerPort: 80
