statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-database
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-database
  serviceName: my-db-service
  template:
    metadata:
      labels:
        app: my-database
    spec:
      containers:
      - name: db
        image: mongo:3.7.1
        ports:
        - containerPort: 80

        volumeMounts:
        - name: data
          mountPath: /data

#  volumeClaimTemplates:
#  - metadata:
#      name: data
#    spec:
#      accessModes: [ "ReadWriteOnce" ]
#      storageClassName: ssd-fast


#      resources:
#        requests:
#          storage: 5Gi
